k8s/20deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: website
  namespace: axcoto
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
        name: website
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: axcoto/website:${GIT_COMMIT}
        name: website
